<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        style="@style/DisplayBookHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:text="@string/dialog_authentication" />

    <ProgressBar
        android:id="@+id/dialog_login_progress"
        style="?android:progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_uco"
        android:textColor="@color/text_dark" />

    <EditText
        android:id="@+id/dialog_login_uco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
			android:background="@drawable/green_text_view"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_marginTop="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_password"
        android:textColor="@color/text_dark" />

    <EditText
        android:id="@+id/dialog_login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
			android:background="@drawable/green_text_view"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/dialog_login_save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checked="true"
        android:text="@string/dialog_remember_me"
        android:textColor="@color/text_dark" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/dialog_button_login"
            style="@style/GreenButtonSmall"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/dialog_button_sign_up"
            style="@style/GreenButtonSmall"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_signup" />
    </LinearLayout>

</LinearLayout>