<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        style="@style/DisplayBookHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:text="@string/dialog_signup" />

    <ProgressBar
        android:id="@+id/dialog_registration_progress"
        style="?android:progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_uco"
        android:textColor="@color/text_dark" />

    <EditText
        android:id="@+id/dialog_register_uco"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
			android:background="@drawable/green_text_view"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/dialog_first_name"
        android:textColor="@color/text_dark" />

    <EditText
        android:id="@+id/dialog_registration_first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
			android:background="@drawable/green_text_view"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/dialog_last_name"
        android:textColor="@color/text_dark" />

    <EditText
        android:id="@+id/dialog_registration_last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
			android:background="@drawable/green_text_view"
        android:inputType="textPersonName" />

    <Button
        android:layout_marginTop="10dip"
        android:id="@+id/dialog_button_sign_up"
        style="@style/GreenButtonSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup" />

</LinearLayout>