<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        style="@style/DisplayBookHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:text="@string/dialog_feedback" />

    <ProgressBar
        android:id="@+id/dialog_feedback_progress"
        style="?android:progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginRight="8dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_feedback_message"
        android:textColor="@color/text_dark" />

    
    <EditText
        android:id="@+id/dialog_feedback_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:background="@drawable/green_text_view"
        android:singleLine="false" 
		android:lines="3"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:layout_marginTop="10dip"
        android:id="@+id/dialog_button_send"
        style="@style/GreenButtonSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send" />

</LinearLayout>