<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:background="@color/background_light">
  	
	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="vertical"
  		android:padding="20dip"
  		android:paddingBottom="0dip">
  		
  		<TextView android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:text="@string/rate_rating"
  			android:textColor="@color/text_dark"
  			android:layout_marginBottom="10dip"
  			android:textStyle="bold"
  			android:paddingTop="10dip" />

  		<RatingBar 
  		    android:id="@+id/rate_rating_bar"
  		    android:numStars="5"
  		    android:stepSize="1"
  		    android:isIndicator="false"
  		    android:max="5"
  		    android:layout_gravity="center_horizontal"
  		    android:layout_width="wrap_content"
  		    android:layout_height="wrap_content" />
  		
  		<TextView android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:layout_marginBottom="10dip"
  			android:text="@string/rate_review"
  			android:textColor="@color/text_dark"
  			android:textStyle="bold"
  			android:paddingTop="10dip" />
  		
  		<EditText
			android:id="@+id/rate_review"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="top"
			android:background="@drawable/green_text_view"
			android:singleLine="false" 
			android:lines="5"/>
		
		<Button 
		    style="@style/smartlibtheme_green_button"
			android:id="@+id/rate_button"
			android:text="@string/btn_send"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dip" />
  	
	</LinearLayout>
	
</ScrollView>
