<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="15dip" >

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/background"
	    android:orientation="vertical" 
	    android:paddingBottom="10dip" >
	    
	    <TextView
	    	android:id="@+id/display_book_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/text_dark"
	        android:textSize="22sp"
	        android:textStyle="bold" 
	        android:paddingBottom="5dip" />

	    <TextView
	        android:id="@+id/display_book_authors"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dip"
	        android:textColor="@color/text_light" 
	        android:textSize="12sp"
	        android:textStyle="italic" />		    
	</LinearLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		
	    <TextView
        	style="@style/DisplayBookHeading"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dip"
	        android:text="@string/display_book_description" />
		    	
		<ProgressBar 
		    android:id="@+id/display_book_progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="8dp"
	        android:layout_gravity="center_vertical"
	        android:visibility="gone"
	        style="?android:progressBarStyleSmall" />
			
		<TextView 
		    android:id="@+id/display_book_progress_text"
			android:textAppearance="?android:textAppearanceSmall"
			android:layout_width="wrap_content"
	        android:layout_gravity="center_vertical"
			android:visibility="gone"
	        android:layout_height="wrap_content" />
	</LinearLayout>
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/background"
	    android:paddingLeft="5dip"
	    android:paddingTop="10dip"
	    android:orientation="horizontal" >
	
	    <ImageView
	        android:id="@+id/display_book_thumbnail"
	        android:layout_width="100dip"
	        android:layout_height="140dip"
	        android:layout_gravity="center_vertical"
	        android:src="@drawable/no_cover_thumb" />
	    
		<LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:orientation="vertical"
	        android:paddingLeft="10dip">
  
		    
		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:padding="2dip" >
		
		    	<TextView
		        	style="@style/DisplayBookHeading2"
		        	android:layout_width="fill_parent"
		           	android:layout_height="wrap_content"
		            android:layout_marginBottom="0dip"
		            android:text="@string/display_book_isbn" />
		
		        <TextView
		            android:id="@+id/display_book_isbn"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:text ="-"/>
		    </LinearLayout>
		    
	        <LinearLayout
		    	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:padding="2dip" >
		
		        <TextView
			   	   	style="@style/DisplayBookHeading2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
		            android:layout_marginBottom="0dip"
			        android:text="@string/display_book_publisher" />
		
		       	<TextView
			        android:id="@+id/display_book_publisher"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
		            android:text ="-"/>
		   	</LinearLayout>

		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:padding="2dip" >
		
		        <TextView
		            style="@style/DisplayBookHeading2"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="0dip"
		            android:text="@string/display_book_published_date" />
		
		        <TextView
		            android:id="@+id/display_book_published_date"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:text ="-"/>
		    </LinearLayout>

		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:padding="2dip" >
		
		        <TextView
		            style="@style/DisplayBookHeading2"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="0dip"
		            android:text="@string/display_book_language" />
		
		        <TextView
		            android:id="@+id/display_book_language"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:text ="-"/>
		    </LinearLayout>

		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:padding="2dip" >
		
		        <TextView
		            style="@style/DisplayBookHeading2"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="0dip"
		            android:text="@string/display_book_page_count" />
		
		        <TextView
		            android:id="@+id/display_book_page_count"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:text ="-"/>
		    </LinearLayout> 
	    
		</LinearLayout>
	</LinearLayout>	
</LinearLayout>